tests/ui/feature-gates/feature-gate-min-generic-const-args.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-min-generic-const-args.rs:6:29
   |
LL | fn foo<T: Trait>() -> [u8; <T as Trait>::ASSOC] {
   |                             ^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: aborting due to 1 previous error

